working the styles.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="header-right">
             <div class="header-right-inside">
-                <div class="reset">Reset</div>
+                <div class="reset">Sample Data</div>
                 <!--<label class="switch">
                    <input type="checkbox" id="theme">
                    <span class="slider round"></span>
@@ -86,14 +86,14 @@
                         <input type="text" 
                                 id="title" 
                                 name="title" 
-                                placeholder="Book Title" 
-                                >
+                                placeholder="Book Title">
+
                         <label for="author">Author:</label>
                         <input type="text" 
                                id="author" 
                                name="author" 
-                               placeholder="Book Author"
-                               >
+                               placeholder="Book Author">
+
                         <label for="genre-selector">Select Genre:</label>
                         <div class="container-slider-select">
                             <div class="genre-selector">
@@ -143,6 +143,7 @@
 <script src="./scripts/logic.js"></script>
 <!-- Script that deals with DOM manipulation-->
 <script src="./scripts/DOM.js"></script>
+<!--<script src="./scripts/elementbuilder.js"></script>-->
 
 </body>
 </html>
