forgot index.html, added cs reset code as well

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="header-right">
             <div class="header-right-inside">
-                <div class="reset">Sample Data</div>
+                <div class="reset">Test Data</div>
                 <!--<label class="switch">
                    <input type="checkbox" id="theme">
                    <span class="slider round"></span>
