--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="header-right">
             <div class="header-right-inside">
-                <div class="reset">Test...</div>
+                <div class="reset">Test</div>
                 <!--<label class="switch">
                    <input type="checkbox" id="theme">
                    <span class="slider round"></span>
