added sample data to the app, added a reset button.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
         <div class="header-right">
             <div class="header-right-inside">
-                <div class="reset">Test</div>
-                <!--<label class="switch">
-                   <input type="checkbox" id="theme">
-                   <span class="slider round"></span>
-                </label>-->
+                <div class="sample-data">Test</div>
+            </div>
+            <div class="header-right-inside">
+                <div class="reset">Reset</div>
             </div>
         </div>
     </div>
@@ -104,6 +103,8 @@
                                     <option value="Sci-Fi">Science-Fiction</option>
                                     <option value="Love Story">Love Story</option>
                                     <option value="Crime">Crime</option>
+                                    <option value="True-Crime">True-Crime</option>
+                                    <option value="Novel">Novel</option>
                                 </select>
                             </div>
                             <div class="read-slider">
@@ -137,13 +138,11 @@
         </div>  
   </div> 
 
-<!-- JQuery for events and DOM Manipulation-->
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <!-- Application logic script-->   
 <script src="./scripts/logic.js"></script>
-<!-- Script that deals with DOM manipulation-->
+<!-- Script that deals with  DOM manipulation and user interaction-->
 <script src="./scripts/DOM.js"></script>
-<!--<script src="./scripts/elementbuilder.js"></script>-->
-
+<!--Script to manufacture sample books-->
+<script src="./scripts/bookBuilder.js"></script>
 </body>
 </html>
