cleaned up JS code, readme.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 <!-- Application logic script-->   
 <script src="./scripts/logic.js"></script>
-<!-- Script that deals with  DOM manipulation and user interaction-->
+<!-- Script that deals with most DOM manipulation for user interaction-->
 <script src="./scripts/DOM.js"></script>
 <!--Script to manufacture sample books-->
 <script src="./scripts/bookBuilder.js"></script>
